--- a/css/mcdonalds.css
+++ b/css/mcdonalds.css
@@ -8,6 +8,7 @@
     height: 140px;
     /* background-color: rgb(255, 234, 237); */
     position: fixed;
+    background-color: white;
     border-bottom:1px solid #ffbc0d;
 }
 
@@ -204,4 +205,100 @@
 
 .dot:hover a{
     
+}
+
+
+
+/* footer 영역 */
+
+#footer{
+    width: 100%;
+    background-color: #292929;
+    padding: 30px 0;
+}
+
+.foot_inner{
+    width: 1168px;
+    margin: 0 auto;
+}
+
+.f_menu{
+    float: left;
+}
+
+.f_menu li{}
+
+.f_menu li a{
+    display: block;
+    padding: 10px 0;
+    color: white;
+    font-weight: bold;
+}
+
+.f_menu li a.yellow{
+    color: yellow !important;
+}
+
+.info{
+    float: left;
+    margin-left: 20px;
+}
+
+.info li{
+    padding: 10px 0; color: #aaa;
+}
+
+.sns{float: right;}
+
+.sns li{
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.sns li a{
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-image: url("../images/ico_sns.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    text-indent: -9999px;
+
+}
+
+li.sns_1 a{}
+
+li.sns_2 a{
+    background-position: 0 -40px;
+}
+
+li.sns_3 a{
+    background-position: 0 -80px;
+}
+
+li.sns_4 a{background-position: 0 -120px;}
+
+li.sns_5 a{
+    width: 100px;
+    height: 90px;
+    background-image: url('../images/국가공인\ 정보통신접근성\ 품질인증마크.png') !important;
+    background-size: 100px;
+}
+
+    /* top 영역 */
+    
+.top{
+    width: 120px;
+    position: fixed;
+    left: calc(50% + (1168px / 2) + 50px);
+    top: 500px;
+}
+.top .pos{
+    position: sticky;
+    top: 700px;
+}
+.top a{
+    display: block;
+    text-align: center;
+    margin: 5px 0;
 }
